<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fileMenuNoCheckedColor"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/readP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/fileMenuCheckedColor"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/btn_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fileMenuBtnMargin"
                android:layout_marginTop="@dimen/fileMenuBtnMargin"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/fileMenuPicSize"
                    android:layout_height="@dimen/fileMenuPicSize"
                    android:src="@drawable/read" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fileMenuRead" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout android:id="@+id/noteP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/btn_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fileMenuBtnMargin"
                android:layout_marginTop="@dimen/fileMenuBtnMargin"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/fileMenuPicSize"
                    android:layout_height="@dimen/fileMenuPicSize"
                    android:src="@drawable/note" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fileMenuNote" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/handP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/btn_hand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fileMenuBtnMargin"
                android:layout_marginTop="@dimen/fileMenuBtnMargin"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/fileMenuPicSize"
                    android:layout_height="@dimen/fileMenuPicSize"
                    android:src="@drawable/hand" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fileMenuHand" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sealP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/btn_seal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fileMenuBtnMargin"
                android:layout_marginTop="@dimen/fileMenuBtnMargin"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/fileMenuPicSize"
                    android:layout_height="@dimen/fileMenuPicSize"
                    android:src="@drawable/seal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fileMenuSeal" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>