<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}">
	<!-- 顶部菜单 -->
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/file_topback"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/fileTopPaddingSize"
        android:paddingRight="@dimen/fileTopPaddingSize">
        <ImageView android:id="@+id/btnReturn"
            android:layout_width="@dimen/fileTopBtnSize"
            android:layout_height="@dimen/fileTopBtnSize"
            android:src="@drawable/s_open_return"/>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal"
            android:layout_weight="1000">
            <!-- 按钮一 -->
            <LinearLayout android:id="@+id/readP"
                android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:background="@color/fileMenuCheckedColor"
	            android:gravity="center_horizontal"
	            android:orientation="vertical" >
	            <LinearLayout android:id="@+id/btn_read"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginBottom="@dimen/fileMenuBtnMargin"
	                android:layout_marginTop="@dimen/fileMenuBtnMargin"
	                android:gravity="center_horizontal"
	                android:orientation="vertical" >
	
	                <ImageView android:layout_width="@dimen/fileMenuPicSize"
	                    android:layout_height="@dimen/fileMenuPicSize"
	                    android:src="@drawable/read" />
	
	                <TextView android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/fileMenuRead" />
	            </LinearLayout>
	        </LinearLayout>
	        <!-- 按钮二 -->
	        <LinearLayout android:id="@+id/noteP"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center_horizontal"
	            android:orientation="vertical" >
	
	            <LinearLayout android:id="@+id/btn_note"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginBottom="@dimen/fileMenuBtnMargin"
	                android:layout_marginTop="@dimen/fileMenuBtnMargin"
	                android:gravity="center_horizontal"
	                android:orientation="vertical" >
	
	                <ImageView android:layout_width="@dimen/fileMenuPicSize"
	                    android:layout_height="@dimen/fileMenuPicSize"
	                    android:src="@drawable/note" />
	
	                <TextView android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/fileMenuNote" />
	            </LinearLayout>
	        </LinearLayout>
	        <!-- 按钮三 -->
	        <LinearLayout android:id="@+id/handP"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center_horizontal"
	            android:orientation="vertical" >
	
	            <LinearLayout android:id="@+id/btn_hand"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginBottom="@dimen/fileMenuBtnMargin"
	                android:layout_marginTop="@dimen/fileMenuBtnMargin"
	                android:gravity="center_horizontal"
	                android:orientation="vertical" >
	
	                <ImageView android:layout_width="@dimen/fileMenuPicSize"
	                    android:layout_height="@dimen/fileMenuPicSize"
	                    android:src="@drawable/hand" />
	
	                <TextView android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/fileMenuHand" />
	            </LinearLayout>
	        </LinearLayout>
	        <!-- 按钮四 -->
	        <LinearLayout android:id="@+id/sealP"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center_horizontal"
	            android:orientation="vertical" >
	
	            <LinearLayout android:id="@+id/btn_seal"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginBottom="@dimen/fileMenuBtnMargin"
	                android:layout_marginTop="@dimen/fileMenuBtnMargin"
	                android:gravity="center_horizontal"
	                android:orientation="vertical" >
	
	                <ImageView android:layout_width="@dimen/fileMenuPicSize"
	                    android:layout_height="@dimen/fileMenuPicSize"
	                    android:src="@drawable/seal" />
	
	                <TextView android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/fileMenuSeal" />
	            </LinearLayout>
	        </LinearLayout>
	        <!-- 按钮四结束 -->
        </LinearLayout>
        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView android:id="@+id/btnSaveAs"
	            android:layout_width="@dimen/fileTopBtnSize"
	            android:layout_height="@dimen/fileTopBtnSize"
	            android:layout_marginRight="20dp"
	            android:src="@drawable/s_open_saveas"/>
            <ImageView android:id="@+id/btnShare"
	            android:layout_width="@dimen/fileTopBtnSize"
	            android:layout_height="@dimen/fileTopBtnSize"
	            android:src="@drawable/s_open_share"/>
        </LinearLayout>
    </LinearLayout>
    <!-- 菜单第二栏 -->
    <RelativeLayout android:layout_width="match_parent"
        android:padding="10dp"
        android:background="@color/fileMenuCheckedColor"
        android:layout_height="wrap_content">
        <!-- 扩展按钮组1 -->
        <LinearLayout android:id="@+id/readExArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout android:id="@+id/btnReadEx1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView android:layout_width="@dimen/fileMenuExPicSize"
                    android:layout_height="@dimen/fileMenuExPicSize"
                    android:src="@drawable/read_ex1" />

                <TextView android:id="@+id/readType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="阅读1" />
            </LinearLayout>
            <LinearLayout android:id="@+id/btnReadEx2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" >

                <ImageView android:layout_width="@dimen/fileMenuExPicSize"
                    android:layout_height="@dimen/fileMenuExPicSize"
                    android:src="@drawable/read_ex2" />

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="撤销" />
            </LinearLayout>
            <LinearLayout android:id="@+id/btnReadEx3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" >

                <ImageView android:layout_width="@dimen/fileMenuExPicSize"
                    android:layout_height="@dimen/fileMenuExPicSize"
                    android:src="@drawable/read_ex3" />

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="删除" />
            </LinearLayout>
            <LinearLayout android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal" >
                <EditText android:id="@+id/pageE"
                    android:layout_width="@dimen/fileMenuExSSize"
                    android:layout_height="@dimen/fileMenuExSSize"
                    android:inputType="number"
                    android:background="@drawable/style_gopage"
                    android:hint="page"/>
                <Button android:id="@+id/btnPageTo"
                    android:layout_width="@dimen/fileMenuExSSize"
                    android:layout_height="@dimen/fileMenuExSSize"
                    android:background="@drawable/selector_btnpageto"
                    android:text="GO"/>
            </LinearLayout>
        </LinearLayout>
        <!-- 扩展按钮组2 -->
        <LinearLayout android:id="@+id/noteExArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:orientation="horizontal">
		    <LinearLayout android:id="@+id/btnNoteEx1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView android:layout_width="@dimen/fileMenuExPicSize"
                    android:layout_height="@dimen/fileMenuExPicSize"
                    android:src="@drawable/note_ex1" />

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="新建" />
            </LinearLayout>
            <LinearLayout android:id="@+id/btnNoteEx2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" >

                <ImageView android:layout_width="@dimen/fileMenuExPicSize"
                    android:layout_height="@dimen/fileMenuExPicSize"
                    android:src="@drawable/note_ex2" />

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="编辑" />
            </LinearLayout>
        </LinearLayout>
        <!-- 扩展按钮组3 -->
        <LinearLayout android:id="@+id/handExArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:orientation="horizontal">
		    <LinearLayout android:id="@+id/btnHandEx1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView android:layout_width="@dimen/fileMenuExPicSize"
                    android:layout_height="@dimen/fileMenuExPicSize"
                    android:src="@drawable/hand_ex1" />

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="属性设置" />
            </LinearLayout>
            <LinearLayout android:id="@+id/btnHandEx2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" >

                <ImageView android:layout_width="@dimen/fileMenuExPicSize"
                    android:layout_height="@dimen/fileMenuExPicSize"
                    android:src="@drawable/hand_ex2" />

                <TextView android:id="@+id/handSetT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="手触设置" />
            </LinearLayout>
            <LinearLayout android:id="@+id/btnHandEx3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" >

                <ImageView android:layout_width="@dimen/fileMenuExPicSize"
                    android:layout_height="@dimen/fileMenuExPicSize"
                    android:src="@drawable/hand_ex3" />

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="橡皮擦" />
            </LinearLayout>
        </LinearLayout>
        <!-- 扩展按钮组4 -->
        <LinearLayout android:id="@+id/sealExArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:orientation="horizontal">
		    <LinearLayout android:id="@+id/btnSealEx1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView android:layout_width="@dimen/fileMenuExPicSize"
                    android:layout_height="@dimen/fileMenuExPicSize"
                    android:src="@drawable/seal_ex1" />

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="选章" />
            </LinearLayout>
            
		    <LinearLayout android:id="@+id/btnSealEx2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" >

                <ImageView android:layout_width="@dimen/fileMenuExPicSize"
                    android:layout_height="@dimen/fileMenuExPicSize"
                    android:src="@drawable/seal_ex2" />

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="验章" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <!-- 文档显示区 -->
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp"
        android:layout_weight="1000"
        android:background="#D6D3D3">
        <LinearLayout android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"/>
        <!-- 编辑框弹出框/文字弹出内容 -->
		<include android:id="@+id/editLayout"
		    android:layout_width="200dp"
		    android:layout_height="wrap_content"
		    android:layout_centerInParent="true"
		    android:visibility="gone"
		    layout="@layout/edit_view"/>
    </RelativeLayout>
    
    <!-- 底部菜单区 -->
    <!-- <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
    </LinearLayout> -->

</LinearLayout>
